--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
         </activity>
         <activity android:name=".SignupActivity" />
         <activity android:name=".ProjectDetailActivity" />
-        <activity android:name=".ListProjectActivity"></activity>
-        <activity android:name=".CreateProjectActivity"></activity>
+        <activity android:name=".ListProjectActivity" />
+        <activity android:name=".CreateProjectActivity" />
+        <activity android:name=".CreateRedPontActivity" />
+        <activity android:name=".ListRedPointActivity"></activity>
     </application>
 
 </manifest>
