--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".ListProjectActivity" />
         <activity android:name=".CreateProjectActivity" />
         <activity android:name=".CreateRedPontActivity" />
-        <activity android:name=".ListRedPointActivity"></activity>
+        <activity android:name=".ListRedPointActivity" />
+        <activity android:name=".EditProjectActivity"></activity>
     </application>
 
 </manifest>
