--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.DEFAULT" />
@@ -33,7 +34,10 @@
         <activity android:name=".ListRedpointCheckedActivity" />
         <activity android:name=".MoiTaiTroActivity" />
         <activity android:name=".XemTaiTroActivity" />
-        <activity android:name=".RedpointCheckDetailActivity"></activity>
+        <activity android:name=".RedpointCheckDetailActivity" />
+        <activity android:name=".ListProjectSignupActivity" />
+        <activity android:name=".ProjectDetailSignupActivity" />
+        <activity android:name=".ListProjectMeActivity"></activity>
     </application>
 
 </manifest>
