--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.example.vuduc.apptuthien"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.0.1'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'id.zelory:compressor:1.0.4'
     compile 'com.github.clans:fab:1.6.4'
     testCompile 'junit:junit:4.12'
 }
